# Xdialog

./: .gitignore  Makefile  Makefile.am  README  README.md  Xdialog.spec  autogen.sh  configure  configure.ac  configure.project  zrelease
doc/: .gitignore  Makefile.am  authors.html  box.html  faq.html  license.html
docs/: Makefile  Makefile.am  Xdialog.man  authors.html  box.html  changelog.html  common.html  compatibility.html  faq.html  gtk.html  index.html  license.html  special.html  syntax.html  transient.html
lib/: .gitignore  Makefile.am
po/: .gitignore
samples/: 0common.sh  Xmessage  Xmore  buildlist  buildlist.itemhelp.sh  calendar  chain  checklist  colorsel.sh  combobox.sh  dselect  editbox  fontsel.sh  fselect  gauge  infobox  infobox2  inputbox  kernel  logbox  logbox2  login  menubox  menubox.itemhelp.sh  msgbox  progress.sh  radiolist  rangebox  set-time  tailbox  textbox  timebox  treeview  xlock-wrapper  yesno
src/: Makefile  Makefile.am  callbacks.c  callbacks.h  common.h  gtkcompat.c  gtkcompat.h  interface.c  interface.h  main.c  support.c  support.h
